<resources>
    <string name="app_name">NL-RFID Demo</string>
    <string name="uhf_main_tag_inventory_params_set">Parameter settings</string>
    <string name="uhf_main_tag_inventory">Inventory</string>
    <string name="uhf_main_tag_inventory_data">Inventory result</string>
    <string name="uhf_main_power_set">Power setting</string>
    <string name="uhf_main_start_tag_inventory">Start</string>
    <string name="uhf_main_stop_tag_inventory">Stop</string>
    <string name="uhf_main_clear_tag_data">Clear data</string>
    <string name="uhf_main_help">Click on the corresponding EPC to write the tag</string>
    <string name="uhf_main_tag_num">Total：</string>
    <string name="uhf_main_write_power">Write power</string>
    <string name="uhf_main_read_power">Read power</string>
    <string name="uhf_main_regional_frequency">Regional frequency settings</string>
    <string name="uhf_write_tag_tid">TID&#160;:</string>
    <string name="uhf_write_tag_area">Write partition</string>
    <string name="uhf_write_tag_area_epc">EPC bank</string>
    <string name="uhf_write_tag_area_user">User bank</string>
    <string name="uhf_write_tag_area_hold">Reserved bank</string>
    <string name="uhf_write_tag_area_tid">TID bank</string>
    <string name="uhf_write_tag_text">To be written</string>
    <string name="uhf_wrtite_tag_hint_text">Support(0~9,a~f)</string>
    <string name="uhf_wrtite_tag_check_write">Label data(hex)</string>
    <string name="uhf_wrtite_tag_write">Write</string>
    <string name="uhf_wrtite_tag_read">Read</string>
    <string name="uhf_wrtite_tag_no_data">No data</string>
    <string name="uhf_wrtite_tag_use_password">Enable password</string>
    <string name="uhf_wrtite_tag_input_password">Input password</string>
    <string name="uhf_num">Number</string>
    <string name="uhf_epc_data">EPC data</string>
    <string name="uhf_tag_total_count">Total</string>
    <string name="uhf_init_complete">Init completed.</string>
    <string name="uhf_poweron_failed">Failed to power on</string>
    <string name="uhf_not_available">Not found uhf device.</string>
    <string name="uhf_set_power_failed">Set power data failed.</string>
    <string name="uhf_set_interval_time_failed">Set inventory-timeout failed.</string>
    <string name="uhf_set_embeddata_failed">Error setting UHF additional data.</string>
    <string name="uhf_close_fastmode_failed">Failed to close the quick mode.</string>
    <string name="uhf_poweron_failed_ex">Power on failed, please restart the app</string>
    <string name="uhf_read_nothing">No data</string>
    <string name="uhf_set_region_success">Set region success.</string>
    <string name="uhf_set_write_power_success">Set write-power success</string>
    <string name="uhf_set_read_power_success">Set read-power success</string>
    <string name="uhf_count">Count</string>
    <string name="uhf_ant">Antenna</string>
    <string name="uhf_protocol">Protocol</string>
    <string name="uhf_rssi">RSSI</string>
    <string name="uhf_freq">Frequency</string>
    <string name="uhf_embeddata">Additional data</string>
    <string name="uhf_data_limit">The character length should be a multiple of 2 bytes or too long</string>
    <string name="uhf_write_failed_tip">please make sure there are no other tags around it</string>
    <string name="uhf_freq_region_china">China</string>
    <string name="uhf_freq_region_china_2">China2</string>
    <string name="uhf_freq_region_north_america">North America</string>
    <string name="uhf_freq_region_europe">Europe</string>
    <string name="uhf_freq_region_all">Full band</string>
    <string name="uhf_size">Size : </string>
    <string name="uhf_content">Content : </string>
    <string name="uhf_getting_data">Geting tag data...</string>
    <string name="uhf_init_ufh">Init UHF...</string>
    <string name="uhf_read_time">Reading time：</string>
    <string name="uhf_read_count_once">Once tag count：%s</string>
    <string name="common_confirm">Confirm</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_tip">Tip</string>
    <string name="common_no">No</string>
    <string name="loading_uhf_module">Loading module...</string>
    <string name="uhf_module_unavailable">UHF device not detected, verify that UHF module exists and install correctly.</string>
    <string name="common_exit">Exit</string>
    <string name="search_again">Reload</string>
    <string name="power_on_failed_prompt">Power failure, please unplug the UHF module again.</string>
    <string name="success">Success</string>
    <string name="failed">Failed</string>
    <string name="exit_confirm_tip">Press again to exit app.</string>
    <string name="stop_inventory_first">Inventory is in progress, please stop first</string>
    <string name="power_oning">Connecting to module...</string>
    <string name="uhf_read_write">RFID Reader</string>
    <string name="uhf_inventory">Inventory</string>
    <string name="uhf_tag">Tag</string>
    <string name="uhf_record_max_rssi">Max RSSI</string>
    <string name="uhf_multip_tags">Multi-tag</string>
    <string name="uhf_tag_tid">TID</string>
    <string name="uhf_total_count">Total:%s</string>
    <string name="uhf_total_tag">Tag count:%s</string>
    <string name="uhf_inv_speed">Speed:%s</string>
    <string name="uhf_inv_mode_normal">Normal mode</string>
    <string name="battery_temperature">Temperature:%s°C</string>
    <string name="filter_repetitive_tag">Non-repeat</string>
    <string name="no_data">No data</string>
    <string name="setting_success">Succeess</string>
    <string name="setting_fail">Failed</string>
    <string name="unsupport_region">Unsupported region</string>
    <string name="tips_para_on">Battery monitor on</string>
    <string name="tips_para_off">Battery monitor off</string>
    <string name="tips_para_warn1">it will notice charging</string>
    <string name="tips_para_warn2">it will notice powerring off</string>
    <string name="get">Get</string>
    <string name="set">Set</string>
    <string name="protocal_choose">Protocal</string>
    <string name="protocal_national">National/Military</string>
    <string name="ant_power_setting">Ant power</string>
    <string name="read_power">Read power</string>
    <string name="write_power">Write power</string>
    <string name="region_choose">Region</string>
    <string name="frequence_choose">Frequence</string>
    <string name="reader_encode">Tag encode</string>
    <string name="q_value">Q value</string>
    <string name="ant_check">Ant check</string>
    <string name="check">Check</string>
    <string name="non_check">Uncheck</string>
    <string name="power_monitor">Battery capacity</string>
    <string name="if_monitor">Enable</string>
    <string name="power_warning_1">Warning1:</string>
    <string name="power_warning_2">Warning2:</string>
    <string name="inv_policy_normal_label">Normal mode</string>
    <string name="inv_policy_balance_label">Equilibrium mode</string>
    <string name="inv_policy_quickly_label">Quickly mode</string>
    <string-array name="inv_policy_labels">
        <item>@string/inv_policy_normal_label</item>
        <item>@string/inv_policy_balance_label</item>
        <item>@string/inv_policy_quickly_label</item>
    </string-array>
    <string name="select_all">All</string>
    <string-array name="region_item_labels">
        <item>@string/region_item_china_label</item>
        <item>@string/region_item_china2_label</item>
        <item>@string/region_item_north_america_label</item>
        <item>@string/region_item_euro3_label</item>
        <item>@string/region_item_india_label</item>
        <item>@string/region_item_korea_label</item>
        <item>@string/region_item_all_label</item>
    </string-array>
    <string name="high_temperature_policy">High temperature strategy</string>
    <string name="temperature_more_then">"Temperature >"</string>
    <string name="inventory_stragy">Inventory strategy</string>
    <string-array name="high_temperature_labels">

        <item>60</item>
        <item>55</item>
        <item>50</item>
        <item>45</item>
    </string-array>
    <string name="extended_params">Extended parameters</string>
    <string name="fast_id">FastId</string>
    <string name="extended_output_mode">Special output mode</string>
    <string name="output_mode">Output mode:</string>
    <string name="label_output_mode_autofill">Auto fill</string>
    <string name="label_output_mode_emulate_key">Emulate keys</string>
    <string-array name="labels_output_mode">
        <item>@string/none</item>
        <item>@string/label_output_mode_autofill</item>
        <item>@string/label_output_mode_emulate_key</item>
    </string-array>
    <string name="special_keys">Suffix key:</string>
    <string name="key_label_enter">Enter</string>
    <string name="key_label_backspace">Backspace</string>
    <string name="key_label_f1">F1</string>
    <string name="key_label_f2">F2</string>
    <string name="key_label_f3">F3</string>
    <string name="key_label_f4">F4</string>
    <string name="key_label_f5">F5</string>
    <string name="key_label_f6">F6</string>
    <string name="key_label_f7">F7</string>
    <string name="key_label_f8">F8</string>
    <string name="key_label_f9">F9</string>
    <string name="key_label_f10">F10</string>
    <string name="key_label_f11">F11</string>
    <string name="key_label_f12">F12</string>
    <string-array name="labels_special_key">
        <item>@string/none</item>
        <item>@string/key_label_enter</item>
        <item>@string/key_label_backspace</item>
        <item>@string/key_label_f1</item>
        <item>@string/key_label_f2</item>
        <item>@string/key_label_f3</item>
        <item>@string/key_label_f4</item>
        <item>@string/key_label_f5</item>
        <item>@string/key_label_f6</item>
        <item>@string/key_label_f7</item>
        <item>@string/key_label_f8</item>
        <item>@string/key_label_f9</item>
        <item>@string/key_label_f10</item>
        <item>@string/key_label_f11</item>
        <item>@string/key_label_f12</item>
    </string-array>
    <string name="key_value_none">KEYCODE_UNKNOWN</string>
    <string name="key_value_enter">KEYCODE_ENTER</string>
    <string name="key_value_backspace">KEYCODE_DEL</string>
    <string name="key_value_f1">KEYCODE_F1</string>
    <string name="key_value_f2">KEYCODE_F2</string>
    <string name="key_value_f3">KEYCODE_F3</string>
    <string name="key_value_f4">KEYCODE_F4</string>
    <string name="key_value_f5">KEYCODE_F5</string>
    <string name="key_value_f6">KEYCODE_F6</string>
    <string name="key_value_f7">KEYCODE_F7</string>
    <string name="key_value_f8">KEYCODE_F8</string>
    <string name="key_value_f9">KEYCODE_F9</string>
    <string name="key_value_f10">KEYCODE_F10</string>
    <string name="key_value_f11">KEYCODE_F11</string>
    <string name="key_value_f12">KEYCODE_F12</string>
    <string-array name="values_special_key">
        <item>@string/key_value_none</item>
        <item>@string/key_value_enter</item>
        <item>@string/key_value_backspace</item>
        <item>@string/key_value_f1</item>
        <item>@string/key_value_f2</item>
        <item>@string/key_value_f3</item>
        <item>@string/key_value_f4</item>
        <item>@string/key_value_f5</item>
        <item>@string/key_value_f6</item>
        <item>@string/key_value_f7</item>
        <item>@string/key_value_f8</item>
        <item>@string/key_value_f9</item>
        <item>@string/key_value_f10</item>
        <item>@string/key_value_f11</item>
        <item>@string/key_value_f12</item>
    </string-array>
    <string name="uhf_inv_filter">Tag filter</string>
    <string name="uhf_select_tag">Select tag</string>
    <string name="none">none</string>
    <string name="match">Match</string>
    <string name="non_match">Mismatch</string>
    <string name="tag_filter_on">On</string>
    <string name="tag_filter_off">Off</string>
</resources>