<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow>
            <CheckBox
                android:id="@+id/cb_max_rssi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_params_bar_text_size"
                android:buttonTint="@color/checkbox"
                android:text="@string/uhf_record_max_rssi"/>

            <CheckBox
                android:id="@+id/cb_mutip_tags"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_params_bar_text_size"
                android:buttonTint="@color/checkbox"
                android:text="@string/uhf_multip_tags"/>

            <CheckBox
                android:id="@+id/cb_tid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_params_bar_text_size"
                android:buttonTint="@color/checkbox"
                android:text="@string/uhf_tag_tid"/>

        </TableRow>
        <TableRow>
            <CheckBox
                android:id="@+id/cb_rssi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_params_bar_text_size"
                android:buttonTint="@color/checkbox"
                android:text="RSSI"/>

            <CheckBox
                android:id="@+id/cb_frequence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_params_bar_text_size"
                android:buttonTint="@color/checkbox"
                android:text="@string/uhf_freq"/>

            <CheckBox
                android:id="@+id/cb_protocal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_params_bar_text_size"
                android:text="@string/uhf_protocol"
                android:buttonTint="@color/checkbox"
                android:visibility="gone"/>

        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_total_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_params_bar_text_size"
            android:text="@string/uhf_total_count"/>

        <TextView
            android:id="@+id/tv_total_tags_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_params_bar_text_size"
            android:text="@string/uhf_total_tag"/>

        <TextView
            android:id="@+id/tv_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_params_bar_text_size"
            android:text="@string/uhf_inv_speed"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_params_bar_text_size"
            android:text="Time:"/>

        <EditText
            android:id="@+id/et_time"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:inputType="number"
            android:textSize="@dimen/dimen_params_bar_text_size"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_params_bar_text_size"
            android:text="S"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_params_bar_text_size"
            android:text="@string/uhf_read_time"/>

        <com.nlscan.uhf.demo.util.view.TimerTextView
            android:id="@+id/tv_inv_span_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:minWidth="20dp"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_params_bar_text_size"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_params_bar_text_size"
            android:text="S"/>

        <TextView
            android:id="@+id/tv_battery_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:text="@string/battery_temperature"/>

    </LinearLayout>

</LinearLayout>