<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:descendantFocusability="blocksDescendants">

            <include
                android:id="@+id/listview_head"
                layout="@layout/uhf_data_recycle_view_item_head_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <View
                android:id="@+id/head_split_line"
                android:layout_below="@+id/listview_head"
                android:layout_width="365dp"
                android:layout_marginLeft="10dp"
                android:background="#000000"
                android:layout_height="1dp"></View>

            <com.nlscan.uhf.demo.view.MyListView
                android:id="@+id/lv_data_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/head_split_line"
                android:layout_marginTop="@dimen/dimens_8dp"
                android:layout_marginBottom="@dimen/dimens_8dp"
                android:dividerHeight="0dp"
                android:scrollbars="vertical" />
        </RelativeLayout>
    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimens_24dp"
        android:layout_marginRight="@dimen/dimens_24dp">

        <Button
            android:id="@+id/btn_start_inventory"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/uhf_main_start_tag_inventory"
            android:textColor="@color/text_color" />

        <Button
            android:id="@+id/btn_stop_inventory"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_marginLeft="@dimen/dimens_16dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/uhf_main_stop_tag_inventory"
            android:textColor="@color/text_color" />

        <Button
            android:id="@+id/btn_clean"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_marginLeft="@dimen/dimens_16dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/uhf_main_clear_tag_data"
            android:textColor="@color/text_color" />
    </LinearLayout>

    <include layout="@layout/layout_inv_params_bar" />

</LinearLayout>